--- a/env/snmp_pp/inc/Makefile
+++ b/env/snmp_pp/inc/Makefile
@@ -86,8 +86,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-unknown-linux-gnu
-host_triplet = x86_64-unknown-linux-gnu
+build_triplet = x86_64-pc-linux-gnu
+host_triplet = x86_64-pc-linux-gnu
 subdir = include/snmp_pp
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/acx_cxx_have_std.m4 \
@@ -184,13 +184,13 @@ ETAGS = etags
 CTAGS = ctags
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config_snmp_pp.h.in
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = aclocal-1.15
+ACLOCAL = ${SHELL} /home/developer/Downloads/netsnmp/snmp++-3.3.7/build-aux/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
-AUTOCONF = autoconf
-AUTOHEADER = autoheader
-AUTOMAKE = automake-1.15
+AUTOCONF = ${SHELL} /home/developer/Downloads/netsnmp/snmp++-3.3.7/build-aux/missing autoconf
+AUTOHEADER = ${SHELL} /home/developer/Downloads/netsnmp/snmp++-3.3.7/build-aux/missing autoheader
+AUTOMAKE = ${SHELL} /home/developer/Downloads/netsnmp/snmp++-3.3.7/build-aux/missing automake-1.15
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -240,7 +240,7 @@ LN_S = ln -s
 LTLIBOBJS = 
 LT_SYS_LIBRARY_PATH = 
 MAINT = #
-MAKEINFO = makeinfo
+MAKEINFO = ${SHELL} /home/developer/Downloads/netsnmp/snmp++-3.3.7/build-aux/missing makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
 NM = /usr/bin/nm -B
@@ -286,10 +286,10 @@ WITH_PTHREAD = 1
 WITH_SNMP_PP_IPv6 = 1
 WITH_THREADS = 1
 _SNMPv3 = 1
-abs_builddir = /home/developer/Downloads/snmp++-3.3.7/include/snmp_pp
-abs_srcdir = /home/developer/Downloads/snmp++-3.3.7/include/snmp_pp
-abs_top_builddir = /home/developer/Downloads/snmp++-3.3.7
-abs_top_srcdir = /home/developer/Downloads/snmp++-3.3.7
+abs_builddir = /home/developer/Downloads/netsnmp/snmp++-3.3.7/include/snmp_pp
+abs_srcdir = /home/developer/Downloads/netsnmp/snmp++-3.3.7/include/snmp_pp
+abs_top_builddir = /home/developer/Downloads/netsnmp/snmp++-3.3.7
+abs_top_srcdir = /home/developer/Downloads/netsnmp/snmp++-3.3.7
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -301,26 +301,26 @@ am__quote =
 am__tar = $${TAR-tar} chof - "$$tardir"
 am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
-build = x86_64-unknown-linux-gnu
+build = x86_64-pc-linux-gnu
 build_alias = 
 build_cpu = x86_64
 build_os = linux-gnu
-build_vendor = unknown
+build_vendor = pc
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
 docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
-host = x86_64-unknown-linux-gnu
+host = x86_64-pc-linux-gnu
 host_alias = 
 host_cpu = x86_64
 host_os = linux-gnu
-host_vendor = unknown
+host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/developer/Downloads/snmp++-3.3.7/build-aux/install-sh
+install_sh = ${SHELL} /home/developer/Downloads/netsnmp/snmp++-3.3.7/build-aux/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
