alter SNMPLib cmakelists to have make install with configurable path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,8 +77,11 @@ target_link_libraries(SNMPLib ${SNMP_PP_LIBRARIES})
 # Set installation destination folder for .so and .h files.
 # Change the destination folder
 ###############################
-set(INSTALLATION_DIR "/home/developer/git/Nemsta/env/SNMPLib/lib")
-set(HEADER_DIR "/home/developer/git/Nemsta/env/SNMPLib/inc")
+set(INSTALLATION_DIR "SNMPLib/lib")
+set(HEADER_DIR "SNMPLib/inc")
+if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+    set (CMAKE_INSTALL_PREFIX "/home/developer/git/Nemsta/env/" CACHE PATH "default install path" FORCE )
+endif()
 
 # Set header location that will be copied
 file(GLOB HEADERS inc/*)
